2007-08-01 Chris Kelly <ckdake@ckdake.com> 1.5.7
 
 * Relese: 1.5.7

2007-08-01 Jens Tkotz <jens@peino.de> 1.5.7-svn-b14

 * Change: LOTS of wording fixes.

  Thanks very much to Julien Elie!!

2007-07-29 Jens Tkotz <jens@peino.de> 1.5.7-svn-b13

 * Fix: It was possible to bypass the voting permission.

2007-07-15 Jens Tkotz <jens@peino.de> 1.5.7-svn-b12

 * Change: Updated PEARs Mail/mimePart.php

2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b11

 * Fix: More use of gTranslate()

2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b10

 * Change: LOTS MORE wording fixes.

  Thanks to Julien Elie

2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b9

 * Change: Manifest update.

 * Fix: Use of correct gTranslate at various places.

 * Change: Text Change for default welcome message.

2007-06-27 Jens Tkotz <jens@peino.de> 1.5.7-svn-b8

 * Change: LOTS of wording fixes.

  Thanks to Julien Elie

2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b7

 * Fix: Use of a inputfield instead of a textarea in imagemap
        when embedded in phpNuke. reason is a conflict with tinymce.

2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b6

 * Change: More changes according to wz_tooltips v4

2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b5

 * Change: wz_tooltip.js    v. 4.02

2007-06-06 Jens Tkotz <jens@peino.de> 1.5.7-svn-b4

 * Change: Remove unneeded param $pathToResized from
           Album::resizeAllPhotos

 * Fix: Correct call of the method above.

2007-05-23 Jens Tkotz <jens@peino.de> 1.5.7-svn-b3

 * Fix: Unquoted indexes in ecardform

 * Fix: Wrong trigger for default email_sender in ecardform.

2007-05-23 Jens Tkotz <jens@peino.de> 1.5.7-svn-b2

 * New: In Joomla! and Mambo you can now enter which userlevel
        is allowed to create rootalbums.
        Uninstall/install of component required.

 * New: Method canCreateRootAlbum() for joomla/mambo user

2007-05-03 Jens Tkotz <jens@peino.de> 1.5.7-svn-b1

 * Fix: Little Typo

 * Change: use @ before mkdir in platform/*