@@ -1,6 +1,12 @@
-2007-08-01 Chris Kelly <ckdake@ckdake.com> 1.5.7
- 
- * Relese: 1.5.7
+2007-08-12 Jens Tkotz <jens@peino.de> 1.5.7-svn-b15
+
+ * Change: Added function to detect jhead version.
+           Show a warning if version is below 2.7.
+           At least for 2.0 there are known problems.
+
+   Thanks Kevin for testing!
+
+ * Change: Some more minor wordings.
 
 2007-08-01 Jens Tkotz <jens@peino.de> 1.5.7-svn-b14
 
